--- a/pom.xml
+++ b/pom.xml
@@ -47,25 +47,13 @@
             </plugin>
             
             <plugin>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.2.4</version>
-				<configuration>
-					<transformers>
-						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-							<mainClass>de.mimnu.school.lernfeld5.main.Main</mainClass>
-						</transformer>
-					</transformers>
-					<createDependencyReducedPom>false</createDependencyReducedPom>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>de.mimnu.school.ratespiel.gui.main.Main</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
